--- a/backend/internal/mailer/templates/user_welcome.tmpl
+++ b/backend/internal/mailer/templates/user_welcome.tmpl
@@ -8,6 +8,11 @@ We hope StratCheck can become a vital tool in your arsenal as a trader. Happy Tr
 
 For reference, your user ID number is {{.ID}}
 
+Please send a request to the `PUT /v1/users/activated` endpoint with the following JSON body to activate your account:
+{"token": "{{.activationToken}}"}
+
+Please note that this is a one-time use token and it will expire in 3 days.
+
 Thanks,
 
 The StratCheck Team
@@ -26,6 +31,11 @@ The StratCheck Team
     <p>Welcome to StratCheck!</p>
     <p>We hope StratCheck can become a vital tool in your arsenal as a trader. Happy Trading!</p>
     <p>For reference, your user ID number is {{.ID}}</p>
+    <p>Please send a request to the <code>PUT /v1/users/activated</code> endpoint with the following JSON body to activate your account:</p>
+    <pre><code>
+    {"token": "{{.activationToken}}"}
+    </code></pre>
+    <p>Please note that this is a one-time use token and it will expire in 3 days.</p>
     <p>Thanks,</p>
     <p>The StratCheck Team</p>
 </body>
